--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,28 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+# Ignore compiled Python files
+*.pyc
+
+# Ignore the Node.js modules directory
+node_modules/
+
+# Ignore the virtual environment directory
+venv/
+
+# Ignore the Django migrations directory
+migrations/
+
+# Ignore the static files directory (if it's not included in .gitignore at the root)
+static/
+
+# Ignore the babel config file
+babel.config.json
+
+# Ignore the package lock file
+package-lock.json
+
+# Ignore the compiled JavaScript files (if any)
+src/
+
+# Ignore any other files or directories specific to your frontend app
